--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Page with RTMark Tracking</title>
-    <!-- RTMark Script -->
-    <script src="https://my.rtmark.net/p.js?f=sync&lr=1&partner=6eef6278fda034754b524186338b9876e367bc2903b617f94745e6b4b9e4ffcc" defer></script>
+    <title>Example Page with RTMark Ads</title>
+
+    <!-- RTMark Tracking Script -->
+    <script src="https://my.rtmark.net/p.js?f=sync&lr=1&partner=346e0d00b9386a412b27ff30b067f0312ed456d96305af4f20243fe34251038c" defer></script>
 </head>
 <body>
 
     <h1>Welcome to My Website</h1>
-    <p>This is a simple page to demonstrate adding the RTMark tracking script.</p>
+    <p>This is a simple page with RTMark ads and tracking.</p>
+
+    <!-- Example of a Display Banner Ad (Replace with actual RTMark Ad Code) -->
+    <div class="rtmark-banner">
+        <script src="https://my.rtmark.net/ad.js?partner=346e0d00b9386a412b27ff30b067f0312ed456d96305af4f20243fe34251038c"></script>
+    </div>
 
     <!-- Fallback for users with JavaScript disabled -->
     <noscript>
-        <img src="https://my.rtmark.net/img.gif?f=sync&lr=1&partner=6eef6278fda034754b524186338b9876e367bc2903b617f94745e6b4b9e4ffcc" width="1" height="1" />
+        <img src="https://my.rtmark.net/img.gif?f=sync&lr=1&partner=346e0d00b9386a412b27ff30b067f0312ed456d96305af4f20243fe34251038c" width="1" height="1" />
     </noscript>
 
 </body>
